--- a/index.html
+++ b/index.html
@@ -131,4 +131,13 @@
     });
   </script>
 </body>
+<div class="text-center mt-6 p-4">
+  <a href="https://forms.gle/q9gvSUkYN1k5oFhY8" target="_blank" 
+     class="inline-block bg-gradient-to-r from-green-500 to-emerald-600 text-white font-bold px-8 py-3 rounded-full shadow-lg hover:shadow-xl transition text-lg">
+    🚀 加入 Pro 等待列表（$7/月无限生成）
+  </a>
+  <p class="text-xs text-gray-600 mt-2">
+    前100名用户送 <strong>7天免费 Pro</strong>！
+  </p>
+</div>
 </html>
